5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2447.log
== TEST (2019-04-15 13:51:19) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:52:40) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:54:49) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:55:54) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:03) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- EXECUTION TIME:
0.104939
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:57:29) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:58:31) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- EXECUTION TIME:
0.160311
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:01:16) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:01:33) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men="falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont,2))
-- EXECUTION TIME:
0.160362
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:05:54) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("falta" + pagamento-preco:)

-- ERROR:
File "XXXX", line 4
    print("falta" + pagamento-preco:)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:06:49) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta"" + pagamento-preco)

-- ERROR:
File "XXXX", line 4
    print("Falta"" + pagamento-preco)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:07:03) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta" + pagamento-preco)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Falta" + pagamento-preco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:07:47) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta" + (pagamento-preco))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Falta" + (pagamento-preco))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:08:49) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta", round(pagamento-preco))

-- OUTPUT:
Falta -26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:09:25) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta", round(pagamento-preco,1))

-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:09:48) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta",round(pagamento-preco,1))

-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:10:27) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta",round(preco-pagamento,1))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:12:18) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta",round(preco-pagamento,1))
else:
	print("Troco de ", round(pagamento - preco))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:12:39) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	print("Falta",round(preco-pagamento,1))
else:
	print("Troco de ", round(pagamento - preco))

-- EXECUTION TIME:
0.23134
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:13:41) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco > pagamento):
	print("Falta",round(preco-pagamento,1))
else:
	print("Troco de ", round(pagamento - preco,1))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:13:56) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco > pagamento):
	print("Falta",round(preco-pagamento,1))
else:
	print("Troco de ", round(pagamento - preco,1))

-- EXECUTION TIME:
0.20519
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
